# doc/api.yml
@@ -10,10 +10,8 @@ info:
     or [prod](https://prod-hei-admin.auth.eu-west-3.amazoncognito.com/oauth2/authorize?client_id=i8bg538jpfu6mqmqb61m26trd&response_type=token&scope=email+openid&redirect_uri=https%3A%2F%2Fapi-prod.hei.school%2Fwhoami)
     authentication service.
     Then, start playing with our system!
-
     The implementation of our API is [publicly disclosed](https://github.com/hei-school/hei-admin-api).
     You are welcome to try and compromise it. Happy hacking!
-
 servers:
   - url: 'https://api-dev.hei.school'
   - url: 'https://api-prod.hei.school'
@@ -269,6 +267,7 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+
   '/courses/{id}':
     get:
       tags:
@@ -352,6 +351,310 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+  '/events/{id}':
+    get:
+      tags:
+        - Event
+      summary: Get event by identifier
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: getEventById
+      responses:
+        '200':
+          description: The identified event
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  /events:
+    get:
+      tags:
+        - Event
+      summary: Get all events order by starting_hours
+      description: Update students when `id` are provided, create them otherwise.
+      parameters:
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+      operationId: getEvents
+      responses:
+        '200':
+          description: List of all events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+    put:
+      tags:
+        - Event
+      summary: Create new events or update existing events
+      description: Update events when id are provided, create them otherwise.
+      operationId: createOrUpdateEvents
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/CreateEvent'
+      responses:
+        '200':
+          description: The created or updated events
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CreateEvent'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
+  '/events/{event_id}/event_participants/{event_participant_id}':
+    get:
+      tags:
+        - Event
+      summary: Get event event_participant by identifier
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: event_participant_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: getEventEventParticipantById
+      responses:
+        '200':
+          description: Identified event event participant
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  '/events/{event_id}/event_participants':
+    get:
+      tags:
+        - Event
+      summary: Get all event event_participants
+      description: Event participants can be filtered with an optional status parameter.
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+        - name: status
+          in: query
+          schema:
+            type: string
+            enum:
+              - EXPECTED
+              - HERE
+              - MISSING
+      operationId: getEventEventParticipants
+      responses:
+        '200':
+          description: List of all event event_participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+    post:
+      tags:
+        - Event
+      summary: Create new event event_participants
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: createEventEventParticipants
+      requestBody:
+        description: Event event participants to create
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/Event'
+      responses:
+        '200':
+          description: Created Event event participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+    put:
+      tags:
+        - Event
+      summary: Update existing event event_participants
+      description: Update event event_participants when id are provided, create them otherwise.
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: updateEventEventParticipants
+      requestBody:
+        description: Event event participants to update
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/EventParticipant'
+      responses:
+        '200':
+          description: Updated Event event participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  /event_participants:
+    get:
+      tags:
+        - Event
+      summary: Get all event event_participants filtered by status
+      parameters:
+        - name: status
+          in: query
+          description: "See the event_participants object for its value."
+          schema:
+            type: string
+            default: EXPECTED
+            enum:
+              - EXPECTED
+              - HERE
+              - MISSING
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+      operationId: getEventParticipants
+      responses:
+        '200':
+          description: List of filtered event event_participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+
   '/teachers/{id}':
     get:
       tags:
@@ -943,6 +1246,38 @@ components:
         creation_datetime:
           type: string
           format: date-time
+    Event :
+      type: object
+      properties :
+        id:
+          type: string
+        eventType :
+          type : string
+        startTime :
+          type : string
+          format : time
+        endTime :
+          type : string
+          format : time
+        idPlace :
+          type : string
+    EventParticipant:
+      type : object
+      properties :
+        idEventParticipant:
+          type : string
+        status:
+          type : string
+          enum:
+            - EXCEPTED
+            - HERE
+            - MISSING
+        participant:
+          type : object
+          $ref: '#/components/schemas/User'
+        event:
+          type: object
+          $ref: '#/components/schemas/Event'
     Course:
       type: object
       properties:
@@ -958,6 +1293,38 @@ components:
           type: integer
         total_hours:
           type: integer
+    CreateEvent:
+      type : object
+      properties :
+        id :
+          type : string
+        eventType :
+          type : string
+        startTime:
+          type : string
+          format : time
+        endTime :
+          type : string
+          format : time
+        id_place :
+          type : string
+    CreateCourse:
+      type: object
+      properties:
+        id:
+          type: string
+        ref:
+          type: string
+          example: PROG1
+        name:
+          type: string
+          example: Algorithmics
+        credits:
+          type: integer
+          example : 3
+        totalHours:
+          type: integer
+          example: 2
     CreateFee:
       type: object
       properties:
@@ -1086,3 +1453,4 @@ components:
       example:
         type: InternalServerException
         message: Unexpected error
+
