# src/main/java/school/hei/haapi/model/Course.java
@@ -1,0 +1,42 @@
+package school.hei.haapi.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
+//import javax.validation.constraints.Min;
+//import javax.validation.constraints.NotBlank;
+import java.io.Serializable;
+
+@Data
+@Entity
+@ToString
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@Table(name = "\"course\"")
+public class Course implements Serializable {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private String id;
+
+    @Column (nullable = false , unique = true)
+    private String ref;
+    //@NotBlank
+    @Column (nullable = false)
+    private String name;
+
+    //@Min(value = 1)
+    private Integer credits;
+    @Column (nullable = false)
+    //@Min(value = 1)
+    private Integer totalHours;
+}
